<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="60dp"
        app:strokeColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/edFullName"
        >
    <ImageView
        android:id="@+id/ivRegPicture"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/userphoto"
        android:scaleType="centerCrop"
        />
    </com.google.android.material.card.MaterialCardView>
    <EditText
        android:id="@+id/edFullName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@+id/edNickname"
        android:hint="@string/enterflname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edNickname"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@+id/edEmail"
        android:hint="@string/enternickname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/enteremail"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edEmail"
        android:hint="@string/enterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />
    <EditText
        android:id="@+id/edConfPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edPassword"
        android:hint="@string/confirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />
    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edConfPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/btnRegistration"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />

</RelativeLayout>